# file-icons

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  deny.toml  generated.rs  index.ts  package.json  pnpm-lock.yaml  rust-toolchain.toml  test.js  tsconfig.json  vitest.config.ts
.changes/: config.json  initial-release.md  metadata.md  vscode-icons-12-8.md  wizer.md
.github/workflows/: audit.yml  ci.yml  covector-version-or-publish.yml
benches/: simple.rs
scripts/: gen-lut.ts  gen.ts
src/: generated.rs  lib.rs  lib.ts  wasm.d.ts
tests/: simple.test.ts
