[package]
name = "file-icons"
authors = ["CrabNebula <hello@crabnebula.dev>"]
edition = "2021"
version = "0.1.0"
rust-version = "1.70.0"
license = "MIT or Apache-2.0"
repository = "https://github.com/crabnebula-dev/devtools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
fst = "0.4.7"
#fst = { path = "/Users/crabnejonas/Documents/GitHub/fst", default-features = false }
lazy_static = "1.4.0"

[build-dependencies]
fst = "0.4.7"
#fst = { path = "/Users/crabnejonas/Documents/GitHub/fst" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
#strip = true