[package]
name = "file-icons"
authors = ["Jonas Kruckenberg <jonas@crabnebula.dev>", "CrabNebula <hello@crabnebula.dev>"]
edition = "2021"
version = "0.1.0"
rust-version = "1.70.0"
license = "MIT or Apache-2.0"
repository = "https://github.com/crabnebula-dev/file-icons"
keywords = ["icons", "file-icons"]
include = ["/src", "LICENSE-MIT.md", "LICENSE-APACHE.md", "/icons"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fst = { git = "https://github.com/CrabNejonas/fst", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[build-dependencies]
fst = { git = "https://github.com/CrabNejonas/fst" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[[bench]]
name = "simple"
harness = false

[features]
default = ["std"]
std = []
_web_build = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
